2016-09-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Create a preliminary autotest framework.

	* configure.ac (AC_TESTDIR): Initialize tests subdirectory.
	(AC_PROG_CXX): Identify C++ compiler; the testsuite will use it.
	(AC_CHECK_PROG): Check availability of autom4te; specify fallback.
	(AC_CONFIG_FILES): Add instantiation requests for tests/atlocal,
	tests/Makefile, and tests/testsuite.at.tmp

	* tests/testsuite.at.in tests/atlocal.in tests/headers.at
	* tests/Makefile.in: New files; implement them.

	* Makefile.in (check, check-recursive, tests): Implement new goals.
	(mingwrt-srcdist-files): Subdivide package files complement into...
	(mingwrt-srcdist-package-files): ...this original collection, and...
	(mingwrt-srcdist-testsuite-files): ...this additional set.

	* test_headers.c: Superseded by autotest; delete it.

2016-08-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add pthreads-win32 courtesy support hooks.

	* include/errno.h: Assert copyright; tidy layout.
	(_ERRNO_H_): Rename this repeat inclusion guard macro as...
	(_ERRNO_H): ...this, conforming to preferred naming convention.
	[__PTW32_H]: Include "ptw32_errno.h".

	* include/time.h [__SCHED_H_SOURCED__]
	(struct timespec): Typedef it selectively; do not define...
	(_TIME_H): ...this.

2016-08-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement POSIX printf() feature per request [#2310].

	* mingwex/stdio/pformat.c [WITH_XSI_FEATURES]: Delete references.
	(PFORMAT_GROUPED): New manifest constant; define it.  It previously
	appeared in an occluded XSI feature reference, but is now required.
	(__pformat_t.tslen, __pformat_t.tschr, __pformat_t.grouping): New
	structure member fields; they maintain control state as set up by...
	(__pformat_enable_thousands_grouping): ...this new internal function.
	(__pformat_int_bufsiz): Use it; it may request a size increment.
	(__pformat_emit_digit, __pformat_emit_punct): New functions; they