@@ -1,5 +1,15 @@
 2016-09-13  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Suppress expected header warnings when running testsuite.
+
+	* include/dir.h include/dos.h [__IN_MINGWRT_TESTSUITE__]: New feature
+	test; do not emit warning messages, which declare this pair of headers
+	to be obsolete.  These warnings are expected, but their format may not
+	be deterministically predictable; there is no reason to fail any test
+	on account of any such expected warning message.
+
+2016-09-13  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Create a preliminary autotest framework.
 
 	* configure.ac (AC_TESTDIR): Initialize tests subdirectory.
